[package]
name = "rustaceans_wit_attitudes"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
rand = { version = "0.8.5", features = [] }

[features]
debug = [] # cargo run --features debug